--- a/src/main/resources/src/components/MainPage/MainPage.scss
+++ b/src/main/resources/src/components/MainPage/MainPage.scss
@@ -2,11 +2,12 @@
 
 .main_page {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   &__content {
     display: flex;
     flex-direction: row;
+    height: 100%;
     min-height: calc(100vh - 60px - 0px);
 
     .main_page__overlay {
@@ -24,12 +25,27 @@
 
     .main_page__activity_panel {
       width: 100%;
-      overflow-y: auto;
-      overflow-x: auto;
+      // overflow-y: auto;
+      // overflow-x: auto;
+      margin-left: 230px;
+      margin-top: 60px;
       background-color: #f6f6f6;
+      // border-left: 1px solid #cccccc;
 
-      //dark-theme
-      // background-color: darken($side_menu__background, 5%);
+      &--minimized {
+        margin-left: 61px;
+      }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .main_page__activity_panel {
+      margin-left: 0px;
+      border-left: none;
+
+      &--minimized {
+        margin-left: 0;
+      }
     }
   }
 
